tests/NormalTests/paczka1/small_fuzzy/40488719.err
Error in line 3: w2mdf S891 67,9
Error in line 2: grL6 A189 79,1
Error in line 5: zLkZDLL S464 49,9
